fix: align seller name to the right on the shelf

--- a/react/components/SellerName/Shelf/SellerNameShelf.css
+++ b/react/components/SellerName/Shelf/SellerNameShelf.css
@@ -16,6 +16,7 @@
     border: none;
     background: transparent;
     cursor: pointer;
+    text-align: right;
 }
 .containerSallername {
     position: relative;
